<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg">

    <!-- Guidelines for vertical margins -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <!-- Logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoImageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top" />

    <!-- Login text -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />

    <!-- Email Label -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emailLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/proxima_nova_alt_bold"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTextView" />

    <LinearLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLabelTextView">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center|start"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/charcoal_blue_50" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emailValidTextview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_alert"
        android:drawablePadding="5dp"
        android:textColor="@color/orange_error"
        android:visibility="gone"
        android:fontFamily="@font/proxima_nova_regular"
        app:layout_constraintStart_toStartOf="@id/emailTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout" />

    <!-- Password Label -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/proxima_nova_alt_bold"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailValidTextview" />

    <!-- Password Text Field -->
    <LinearLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLabelTextView">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center|start"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColorHint="@color/charcoal_blue_50" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordValidTextview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_alert"
        android:visibility="gone"
        android:textColor="@color/orange_error"
        android:drawablePadding="5dp"
        android:fontFamily="@font/proxima_nova_regular"
        app:layout_constraintStart_toStartOf="@id/passwordTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout" />

    <!-- Forgot Password Text -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/charcoal_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordValidTextview" />

    <!-- Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_gradient"
        android:text="@string/login"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView" />

    <!-- Signup Text -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/charcoal_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
