<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".ui.activity.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.SignupActivity">

        <!-- Guidelines for vertical margins -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <!-- Guidelines for vertical margins -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <!-- Logo -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImageView"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/login"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_top" />

        <!-- Signup text -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/SignupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImageView" />

        <!-- Email Label -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/proxima_nova_alt_semibold"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/SignupTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/emailLabelTextView">

            <!-- Email Icon -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/emailIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Email EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center|start"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textColor="@color/black"
                android:textColorHint="@color/charcoal_blue_50"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/emailIcon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailValidTextview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_alert"
            android:drawablePadding="5dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:textColor="@color/orange_error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/emailTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout" />

        <!-- Name Label -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/proxima_nova_alt_semibold"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/emailValidTextview" />

        <!-- Name Input Layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nameTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/nameLabelTextView">

            <!-- Name Icon -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/nameIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Name EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center|start"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/charcoal_blue_50"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nameIcon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameValidTextview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_alert"
            android:drawablePadding="5dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:textColor="@color/orange_error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/nameTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout" />

        <!-- Phone Number Label -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phoneLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/proxima_nova_alt_semibold"
            android:text="@string/phone_number"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/nameValidTextview" />

        <!-- Phone Number Input Layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phoneTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/phoneLabelTextView">

            <!-- Phone Icon -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/phoneIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Phone EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center|start"
                android:hint="@string/enter_your_number"
                android:inputType="phone"
                android:maxLength="10"
                android:textColorHint="@color/charcoal_blue_50"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/phoneIcon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phoneValidTextview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_alert"
            android:drawablePadding="5dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:textColor="@color/orange_error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/phoneTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/phoneTextInputLayout" />

        <!-- Password Label -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/proxima_nova_alt_semibold"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/phoneValidTextview" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/passwordLabelTextView">

            <!-- Password Icon -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/passwordIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Password EditText -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center|start"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColorHint="@color/charcoal_blue_50"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/passwordToggle"
                app:layout_constraintStart_toEndOf="@id/passwordIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Password Toggle Icon -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/passwordToggle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/password"
                android:src="@drawable/ic_eye_hide"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordValidTextview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_alert"
            android:drawablePadding="5dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:textColor="@color/orange_error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/passwordTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout" />

        <!-- Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/proxima_nova_alt_bold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/passwordValidTextview" />

        <!-- Signup Text -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:gravity="center"
            android:text="@string/existing_user"
            android:textColor="@color/charcoal_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/loginTextView"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/createButton" />

        <!-- Create Account Text -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/proxima_nova_alt_semibold"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/signupTextView"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/signupTextView"
            app:layout_constraintTop_toTopOf="@id/signupTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

